Fix button alignment for <a> tags

--- a/app/stylesheets/partials/_forms.scss
+++ b/app/stylesheets/partials/_forms.scss
@@ -186,7 +186,8 @@ select {
 // No styleguide reference.
 button,
 .button {
-	display: inline-block;
+	@include box-sizing(border-box);
+	@include inline-block;
 	vertical-align: top;
 	position: relative;
 	z-index: 1;
